<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/delete"
        app:showAsAction="ifRoom"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        />

    <item android:id="@+id/edit"
        app:showAsAction="ifRoom"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        />
</menu>