<resources>
    <string name="app_name" translatable="false">Pigeon</string>

    <string name="total_earning" translatable="false">%dkr</string>
    <string name="total_earning_exclusive" translatable="false">%dkr</string>
    <string name="increase_procent_treatments">%d%% this month</string>
    <string name="view_all">View all</string>
    <string name="upcoming">Upcoming</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="services">Services</string>
    <string name="service">Service</string>
    <string name="to">To</string>
    <string name="time">Time</string>
    <string name="time_template">Time offset</string>
    <string name="message">Message</string>
    <string name="clear_fields">Clear fields</string>
    <string name="complete">Complete</string>
    <string name="timetemplate_title">TimeTemplate</string>
    <string name="message_title">Message</string>
    <string name="addedit_treatment_title">AddEdit</string>
    <string name="before_time">Before chosen time</string>
    <string name="after_time">After chosen time</string>
    <string name="time_template_missing_data">Time offset must be at least one minute.</string>
    <string name="view_contacts">Contacts</string>
    <string name="view_treatments">Services</string>
    <string name="money">Money</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="import_contacts">Import contacts</string>
    <string name="permission_denied">Permission denied</string>
    <string name="addedit_contact_title">AddEdit</string>
    <string name="settings_title">Settings</string>
    <string name="import_contacts_title">Import contacts</string>
    <string name="price">Price</string>
    <string name="duration">Duration</string>
    <string name="new_message">New message</string>
    <string name="choose">Choose</string>
    <string name="edit">Edit</string>
    <string name="empty_message">Message cannot be empty</string>
    <string name="sms_error_channel">Sms error</string>
    <string name="sms_error_description">When a scheduled sms failed to be delivered or sent</string>
    <string name="empty_treatment_message">Empty services text</string>
    <string name="loading_treatment_error">Error while loading service</string>
    <string name="delete">delete</string>
    <string name="empty_contact_message">Empty contact text</string>
    <string name="loading_contact_error">Error while loading contact</string>
    <string name="default_message">Default message</string>
    <string name="default_timetemplate">Default time offset</string>
    <string name="default_treatment">Default service</string>
    <string name="none">none</string>
    <string name="messages">Messages</string>
    <string name="dashboard">Dashboard</string>
    <string name="time_offsets">Time offsets</string>
    <string name="addedit_timetemplate_title">AddEdit</string>
    <string name="contacts">Contacts</string>
    <string name="appointments">Appointments</string>
    <string name="archived">Archived</string>
    <string name="variables_info">Variables Info</string>
    <string name="selected_count">%1$d Selected</string>
    <string name="send_now">Send now</string>
    <string name="temp_delete_exception_text">Not possible to delete currently.</string>
    <string name="treatment_time">%1$d min</string>
    <string name="treatment_price">%1$d %2$s</string>
    <string name="retry_send">RETRY SEND</string>
    <string name="view">VIEW</string>
    <string name="dismiss">DISMISS</string>
    <string name="sms_failed_known">Sms failed to be sent to %1$s at %2$s. Make sure you have service turned on.</string>
    <string name="sms_not_sent">Sms not sent</string>
    <string name="cancel">CANCEL</string>
    <string name="mark_and_close">MARK AND CLOSE</string>
    <string name="sent">Sent</string>
    <string name="done">Done</string>
    <string name="mark_treatment_as">Mark service as</string>
    <string name="sms_not_sent_title">Sms not sent to %1$s</string>
    <string name="sms_not_delivered_title">Sms not delivered to %1$s</string>
    <string name="permission_not_granted_title">Permission send sms not granted</string>
    <string name="permission_not_granted_description">SMS permission needs to be enabled to send sms.</string>
    <string name="contact_updated">Contact successfully updated</string>
    <string name="contact_saved">Contact successfully saved</string>
    <string name="contact_deleted">Contact successfully deleted</string>
    <string name="treatment_deleted">Service successfully deleted</string>
    <string name="treatment_updated">Service successfully updated</string>
    <string name="treatment_saved">Service successfully saved</string>
    <string name="loading_message_error">Error while loading message</string>

    <string name="messages_deleted">Messages successfully deleted</string>
    <string name="message_deleted">Message successfully deleted</string>
    <string name="message_saved">Message successfully saved</string>
    <string name="message_updated">Message successfully updated</string>
    <string name="time_templates_deleted">Time offset successfully deleted</string>
    <string name="time_template_delete">Time offset deleted</string>
    <string name="time_template_saved">Time offset successfully saved</string>
    <string name="time_template_updated">Time offset successfully updated</string>
    <string name="add_contact">Choose contact</string>
    <string name="choose_message">Choose message</string>
    <string name="choose_time_offset">Choose time offset</string>
    <string name="missing_data">Missing information</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="as_name">as</string>
    <string name="imported">Imported</string>
    <string name="select_all">Select all</string>
    <string name="loading_appointment_error">Error while loading appointment</string>
    <string name="message_hint">Create personalized messages with variables. Ex: Hello [name] welcome to your appointment at [hour]:[min]. The variables (text wrapped in [ ]) will be replaced with corresponding text.</string>
    <string name="time_offset_tutorial"><b>Time offsets</b> is used to offset the send time of the SMS. Time offsets can be positive or negative and describe when the SMS will be sent in relation to the appointment. They make it easy to always send your reminders Ex. 3 hour before the appointment.</string>
    <string name="currency">Currency</string>
    <string name="default_currency">EURO</string>
    <string name="currency_text_hint">Currency</string>
    <string name="ok">OK</string>
    <string name="change_currency">Change currency</string>

    <string-array name="message_variable_descriptions">
        <item>The name of the person for the appointment.</item>
        <item>The minute from the appointment time.</item>
        <item>The hour from the appointment time.</item>
        <item>The number of the day in the month from the appointment time.</item>
        <item>The number of the month from the appointment time.</item>
        <item>The year from the appointment time.</item>
        <item>The name of the used service.</item>
        <item>Date formatted as following, year-month-day Ex. 2020–02–27</item>
        <item>Time formatted as following, hour:minute Ex. 11:06</item>
    </string-array>
    
</resources>