...
        android:name="com.oscarcreator.pigeon.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard"
        >
        <action
            android:id="@+id/action_dashboardFragment_to_addEditTreatmentFragment"
            app:destination="@id/addEditScheduledTreatmentFragment" >
            <argument
                android:name="scheduledTreatmentId"
                android:defaultValue="-1L" />
        </action>
        <action
            android:id="@+id/action_dashboardFragment_to_settingsFragment"
...
